--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -105,7 +105,7 @@
 
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>160</item>
+        <item>10</item>
         <item>225</item>
         <item>320</item>
         <item>640</item>
@@ -122,15 +122,15 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>41</item>
-	<item>55</item>
-        <item>61</item>
-        <item>81</item>
-	<item>100</item>
-        <item>112</item>
-        <item>163</item>
-	<item>198</item>
-        <item>231</item>
+        <item>30</item>
+	<item>30</item>
+        <item>45</item>
+        <item>60</item>
+	<item>75</item>
+        <item>85</item>
+        <item>115</item>
+	<item>155</item>
+        <item>195</item>
         <item>255</item>
     </integer-array>
 
@@ -139,16 +139,16 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessButtonBacklightValues">
-        <item>50</item>
-        <item>50</item>
-        <item>50</item>
-        <item>50</item>
-        <item>120</item>
-        <item>150</item>
-        <item>180</item>
-        <item>210</item>
-        <item>230</item>
+        <item>63</item>
+        <item>63</item>
+        <item>63</item>
+        <item>127</item>
+        <item>191</item>
         <item>255</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
     </integer-array>
 
     <!-- Array of output values for keyboard backlight corresponding to the LUX values
@@ -157,22 +157,22 @@
          Passion has no keyboard so all values are zero.
     -->
     <integer-array name="config_autoBrightnessKeyboardBacklightValues">
-        <item>50</item>
-        <item>50</item>
-        <item>50</item>
-        <item>50</item>
-        <item>120</item>
-        <item>150</item>
-        <item>180</item>
-        <item>210</item>
-        <item>230</item>
-        <item>255</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
     </integer-array>
 
     <bool translatable="false" name="skip_restoring_network_selection">true</bool>
     
     <!-- Boolean indicating whether the wifi chipset has dual frequency band support -->
-    <bool translatable="false" name="config_wifi_dual_band_support">true</bool>
+    <bool translatable="false" name="config_wifi_dual_band_support">false</bool>
 
     <!-- Boolean indicating whether the wifi chipset has background scan support -->
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
